--- a/BackEnd/Echooling/src/Infrastructure/Echooling.Persistance/Resources/ErrorMessages.en-US.resx
+++ b/BackEnd/Echooling/src/Infrastructure/Echooling.Persistance/Resources/ErrorMessages.en-US.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="DublicatedExceptionMsg" xml:space="preserve">
-    <value>Dublicated Name</value>
+    <value>Dublicated Exception</value>
   </data>
   <data name="NotFoundExceptionMsg" xml:space="preserve">
     <value>Not found</value>
